[package]
name = "gantry"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
opcua = { git = "https://github.com/einarmo/opcua", features = ["client"] }
serde_json = "1.0"
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive", "env"] }
arc-swap = "1.7.1"
once_cell = "1.20.2"
serde = { version = "1.0.219", features = ["derive"] }
micro_sp = {git = "https://github.com/endre90/micro_sp", branch = "master"}
